<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/coupon_yellow"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:background="@color/coupon_yellow"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/rl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen_35dp"
                android:layout_marginLeft="@dimen/dimen_20dp"
                android:layout_marginRight="@dimen/dimen_20dp"
                android:gravity="center"
                android:orientation="horizontal"
            >
                <!--画左边的那条线-->
                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1.5px"
                    android:layout_weight="1"
                    android:background="@color/coupon_text_color"
                />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_10dp"
                    android:layout_marginRight="@dimen/dimen_10dp"
                    android:text="@string/instructions"
                    android:textColor="@color/coupon_text_color"
                    android:textSize="@dimen/txt_size_16sp"
                />
                <!--画右边的那条线-->
                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1.5px"
                    android:layout_weight="1"
                    android:background="@color/coupon_text_color"
                />
            </LinearLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/dimen_20dp"
                android:layout_marginRight="@dimen/dimen_20dp">
                <TextView
                    android:id="@+id/tv_a"
                    android:layout_width="@dimen/dimen_25dp"
                    android:layout_height="@dimen/dimen_25dp"
                    android:background="@drawable/tv_bg_circular"
                    android:gravity="center"
                    android:text="a"
                    android:textColor="#ffffff"
                    android:textSize="@dimen/txt_size_16sp"/>
                <TextView
                    android:id="@+id/tv_a_question"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_10dp"
                    android:layout_toRightOf="@+id/tv_a"
                    android:text="@string/coupon_a_question"
                    android:textColor="@color/coupon_text_color"
                    android:textSize="@dimen/txt_size_16sp"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/tv_a_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_a"
                    android:layout_marginLeft="@dimen/dimen_8dp"
                    android:layout_marginTop="@dimen/dimen_20dp"
                    android:text="1."
                    android:textColor="@color/coupon_text_color"
                    android:textSize="@dimen/txt_size_16sp"/>
                <TextView
                    android:lineSpacingMultiplier="1.3"
                    android:id="@+id/tv_a_rule1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/tv_a_question"
                    android:layout_alignTop="@+id/tv_a_1"
                    android:text="@string/coupon_a_rule1"
                    android:textColor="@color/coupon_text_color"
                    android:textSize="@dimen/txt_size_16sp"/>
                <TextView
                    android:id="@+id/tv_a_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_a_rule1"
                    android:layout_marginLeft="@dimen/dimen_8dp"
                    android:layout_marginTop="@dimen/dimen_20dp"
                    android:text="2."
                    android:textColor="@color/coupon_text_color"
                    android:textSize="@dimen/txt_size_16sp"/>
                <TextView
                    android:lineSpacingMultiplier="1.3"
                    android:id="@+id/tv_a_rule2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/tv_a_question"
                    android:layout_alignTop="@+id/tv_a_2"
                    android:text="@string/coupon_a_rule2"
                    android:textColor="@color/coupon_text_color"
                    android:textSize="@dimen/txt_size_16sp"/>
                <TextView
                    android:id="@+id/tv_a_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_a_rule2"
                    android:layout_marginLeft="@dimen/dimen_8dp"
                    android:layout_marginTop="@dimen/dimen_20dp"
                    android:text="3."
                    android:textColor="@color/coupon_text_color"
                    android:textSize="@dimen/txt_size_16sp"/>
                <TextView
                    android:lineSpacingMultiplier="1.3"
                    android:id="@+id/tv_a_rule3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/tv_a_question"
                    android:layout_alignTop="@+id/tv_a_3"
                    android:text="@string/coupon_a_rule3"
                    android:textColor="@color/coupon_text_color"
                    android:textSize="@dimen/txt_size_16sp"/>

                <TextView
                    android:id="@+id/tv_b"
                    android:layout_width="@dimen/dimen_25dp"
                    android:layout_height="@dimen/dimen_25dp"
                    android:layout_below="@+id/tv_a_rule3"
                    android:layout_marginTop="@dimen/dimen_35dp"
                    android:background="@drawable/tv_bg_circular"
                    android:gravity="center"
                    android:text="b"
                    android:textColor="#ffffff"
                    android:textSize="@dimen/txt_size_16sp"/>
                <TextView
                    android:id="@+id/tv_b_question"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/tv_b"
                    android:layout_marginLeft="@dimen/dimen_10dp"
                    android:layout_toRightOf="@+id/tv_a"
                    android:text="@string/coupon_b_question"
                    android:textColor="@color/coupon_text_color"
                    android:textSize="@dimen/txt_size_16sp"
                    android:textStyle="bold"/>
                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="70dp"
                    android:layout_alignBottom="@id/tv_b_question"
                    android:layout_alignParentRight="true"
                    android:scaleType="centerInside"
                    android:src="@drawable/bee"/>

                <TextView
                    android:id="@+id/tv_b_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_b"
                    android:layout_marginLeft="@dimen/dimen_8dp"
                    android:layout_marginTop="@dimen/dimen_20dp"
                    android:text="1."
                    android:textColor="@color/coupon_text_color"
                    android:textSize="@dimen/txt_size_16sp"/>
                <TextView
                    android:lineSpacingMultiplier="1.3"
                    android:id="@+id/tv_b_rule1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/tv_a_question"
                    android:layout_alignTop="@+id/tv_b_1"
                    android:text="@string/coupon_b_rule1"
                    android:textColor="@color/coupon_text_color"
                    android:textSize="@dimen/txt_size_16sp"/>
                <TextView
                    android:id="@+id/tv_b_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_b_rule1"
                    android:layout_marginLeft="@dimen/dimen_8dp"
                    android:layout_marginTop="@dimen/dimen_20dp"
                    android:text="2."
                    android:textColor="@color/coupon_text_color"
                    android:textSize="@dimen/txt_size_16sp"/>
                <TextView
                    android:lineSpacingMultiplier="1.3"
                    android:id="@+id/tv_b_rule2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/tv_a_question"
                    android:layout_alignTop="@+id/tv_b_2"
                    android:text="@string/coupon_b_rule2"
                    android:textColor="@color/coupon_text_color"
                    android:textSize="@dimen/txt_size_16sp"/>
                <TextView
                    android:id="@+id/tv_b_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_b_rule2"
                    android:layout_marginLeft="@dimen/dimen_8dp"
                    android:layout_marginTop="@dimen/dimen_20dp"
                    android:text="3."
                    android:textColor="@color/coupon_text_color"
                    android:textSize="@dimen/txt_size_16sp"/>
                <TextView
                    android:lineSpacingMultiplier="1.3"
                    android:id="@+id/tv_b_rule3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/tv_a_question"
                    android:layout_alignTop="@+id/tv_b_3"
                    android:text="@string/coupon_b_rule3"
                    android:textColor="@color/coupon_text_color"
                    android:textSize="@dimen/txt_size_16sp"/>
                <TextView
                    android:id="@+id/tv_b_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_b_rule3"
                    android:layout_marginLeft="@dimen/dimen_8dp"
                    android:layout_marginTop="@dimen/dimen_20dp"
                    android:text="4."
                    android:textColor="@color/coupon_text_color"
                    android:textSize="@dimen/txt_size_16sp"/>
                <TextView
                    android:lineSpacingMultiplier="1.3"
                    android:id="@+id/tv_b_rule4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/tv_a_question"
                    android:layout_alignTop="@+id/tv_b_4"
                    android:text="@string/coupon_b_rule4"
                    android:textColor="@color/coupon_text_color"
                    android:textSize="@dimen/txt_size_16sp"/>

            </RelativeLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>